# dig-wallet-backend

./: .gitignore  .wip-1318  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  ensure-version-increment.yml  publish.yml
src/: lib.rs
src/client/: addressbook.rs  hd.rs  identity.rs  mod.rs  review.rs  signer.rs  subscribe.rs  transport.rs  verify.rs
src/engine/: broadcast.rs  build.rs  build_offer.rs  build_offers.rs  build_options.rs  build_tips.rs  events.rs  mod.rs  offer_state.rs  persist.rs  selection.rs  signer.rs  state.rs  sync.rs
src/types/: error.rs  event.rs  identity.rs  mod.rs  offer.rs  offers.rs  options.rs  request.rs  spend.rs  tips.rs  value.rs
tests/: events_end_to_end.rs  key_isolation.rs  options_e2e.rs  sqlite_persistence.rs
