[package]
name = "dig-wallet-backend"
version = "0.12.1"
edition = "2021"
rust-version = "1.81"
description = "Canonical event-driven Chia wallet backend for the DIG Network. Exports two carefully-partitioned seams: an `engine` seam (imported by dig-node — the single running wallet instance: state, sync, unsigned-spend construction, event emission; identity-parameterized, never holds a private key) and a `client` seam (used by dig-app — the event subscriber, spend review/decode, the signing interface + identity provider that hold the key). Clean-room, chia-wallet-sdk-based. Replaces dig-l1-wallet."
license = "GPL-2.0-only"
repository = "https://github.com/DIG-Network/dig-wallet-backend"
readme = "README.md"
keywords = ["chia", "wallet", "dig", "blockchain", "event-driven"]
categories = ["cryptography::cryptocurrencies"]

[features]
# `types` is always compiled (both seams import it); it is not a toggle.
# `engine` and `client` gate the heavier, seam-specific code + deps so each consumer
# compiles only the half it needs. Default = both, for docs/tests/`--all-features` CI.
default = ["engine", "client"]
# The engine seam: the running instance imported by dig-node-service. Pulls the
# async runtime for the event emitter + sync loop. NEVER pulls a secret-key crate
# (the key-isolation invariant — see SPEC §1, tests/key_isolation.rs).
engine = [
    "dep:tokio",
    "dep:tokio-stream",
    "dep:futures-core",
    "dep:chia-wallet-sdk",
    "dep:dig-options",
    "dep:dig-offers",
    "dep:dig-tips",
    "dep:dig-cat",
    "dep:indexmap",
    "dep:clvmr",
    "dep:rusqlite",
]
# The client seam: used by dig-app. The ONLY place secret material (SecretKey, mnemonic)
# is compiled in — the LocalSigner + master-HD key derivation that hold the key live here,
# behind this feature. `zeroize` wipes in-memory key material on drop (custody, SPEC §1.4/§8).
client = ["dep:tokio", "dep:tokio-stream", "dep:futures-core", "dep:zeroize", "dep:dig-identity"]

[dependencies]
# Chia protocol + BLS crypto types the wire contract is expressed in (Coin, CoinSpend,
# SpendBundle, Bytes32, PublicKey, Signature). The single source of these types across
# the ecosystem — never re-newtyped here (§4.1). SecretKey from this crate is used ONLY
# behind the `client` feature (the LocalSigner), never in the engine seam.
chia = "0.26"
# serde is the wire contract for every shared type crossing the seam IPC boundary.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Structured, catalogued errors (SPEC §2 error-code table).
thiserror = "2"
# Hex encoding for the machine-facing string forms of ids/addresses.
hex = "0.4"
# EnumSet powers the event-subscription FILTER (subscribe to a subset of WalletEvent kinds).
enumset = { version = "1", features = ["serde"] }
# async traits for the signing + broadcast callbacks (RemoteSigner::sign is async).
async-trait = "0.1"
# The CANONICAL wallet/chain event taxonomy (WalletEvent, EventKind, Cursor, WalletId, Amount,
# AssetId) + the EventEmitter/CatchUp shape traits — the ONE ecosystem definition so the engine's
# emitted wire shape and dig-app's subscriber never drift apart (#1067, #1072). Re-exported from
# `crate::types`; the bus/store/subscription machinery that PRODUCES these stays here.
dig-events-protocol = "0.1.2"
# The canonical home for the Chia-L1 AGG_SIG_ME additional data (genesis challenge) both the
# client signer and the engine build bind every mainnet/testnet11 spend signature to. Sourcing
# BOTH seams from this ONE constant makes signer == engine by construction — no drift, no
# custody-break from a hand-copied hex diverging. `CHIA_L1_*` (Chia L1) is deliberately distinct
# from `DIG_MAINNET`/`DIG_TESTNET` (the DIG L2 genesis), which MUST NOT be used for L1 signing.
dig-constants = "0.5.1"

# --- seam-gated (async runtime for the event emitter + subscriber + sync loop) ---
# `sync` = the broadcast channel the EventSink fans events out over. `rt`/`macros`/`time`
# are test-only conveniences pulled in via dev-deps below; the library needs only `sync`.
tokio = { version = "1", features = ["sync"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
futures-core = { version = "0.3", optional = true }
# Wipes master-seed + derived-key bytes on drop (client seam only — the key-custody boundary).
zeroize = { version = "1", optional = true }
# The CANONICAL dig-identity key model (§6a): the hardened identity derivation path
# `m/12381'/8444'/9'/0'`, the 48-byte G1 identity key, and the vetted `g1_dh` G1-ECDH primitive
# (subgroup/non-identity-checked, blst-backed). The recipient DECAP of a dig-message seal is a
# G1-ECDH against this ONE key — this crate NEVER re-rolls the blst curve arithmetic (Appendix B:
# reuse the canonical crate). Client seam only (secret material). Sourced from crates.io (0.4.1 —
# crates.io forbids publishing a crate that has a git dependency; bls.rs there is byte-identical to
# the git v0.4.0 tag this replaces). `default-features = false` + `bls` = just the key model, no
# DID-resolve/network deps.
dig-identity = { version = "0.4", default-features = false, features = ["bls"], optional = true }
# The CANONICAL Chia spend-driver constructors (StandardLayer, Cat, SpendContext, Conditions)
# + the key-free RequiredSignature extractor. The engine builds every unsigned spend through
# these (§4.1: never hand-rolled CLVM) and NEVER touches the sdk's `SecretKey` path. Default
# features off so no peer-networking/TLS stack is pulled into the engine build.
chia-wallet-sdk = { version = "0.30", default-features = false, optional = true }
# The CANONICAL Chia covered-option (CHIP-0042) CoinSpend builders (create/exercise/clawback +
# inspect). The engine composes these for the options suite (mint/transfer/exercise, #1123) —
# NEVER re-implementing option CLVM (§4.1). Pure, key-free, network-free: it builds unsigned
# spends and reports required signatures, never holding a key or signing (identity boundary #908).
# Engine-seam only.
dig-options = { version = "0.2", optional = true }
# The CANONICAL DIG tipping expert crate: a pure, key-free CAT-payment builder for tips (incl. the
# honest, capped, default-on auto-tip to the DIG treasury — the §6.0 $DIG North Star). The engine
# composes `build_tip`/`build_tip_if_allowed`; it speaks `dig_cat` types that re-export
# `chia_protocol`/`chia_wallet_sdk` (same 0.26/0.30 tree — no conversion). Engine-seam only.
dig-tips = { version = "0.1", optional = true }
# The canonical CAT builder crate dig-tips wraps; the engine consumes its `CatError` taxonomy to map
# a failed tip build into the wallet error catalogue. Its type re-exports (Coin/Cat/CoinSpend/Bytes32)
# are `chia_protocol`/`chia_wallet_sdk`'s own (same 0.26/0.30 tree). Engine-seam only.
dig-cat = { version = "0.1", optional = true }
# The CLVM allocator RequiredSignature::from_coin_spends threads its parse through.
clvmr = { version = "0.14", optional = true }
# The persistent (SQLite) backing for the engine state store + event delta log (#1118). `bundled`
# statically links a vendored SQLite so no system library is needed. Engine-seam only; it stores
# PUBLIC coin/asset/tx/event state — NEVER key material (the key-isolation invariant, SPEC §1.4).
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
# The CANONICAL Chia offers expert crate (make/take/cancel/combine/summarize over XCH/CAT/NFT):
# a pure, key-free, network-free settlement `SpendBundle`-builder (CHIP-0023/CHIP-0024). The engine
# composes it for the offers surface — NEVER hand-rolling offer/settlement CLVM (§4.1). The
# make-must-NOT-settle (no-self-fund) rule and take's settlement-announcement assertions live INSIDE
# dig-offers and are preserved by composing it. Pure + key-free: it builds unsigned spends and
# reports required signatures, holding no key and never signing (identity boundary #908). Its
# `make_assemble`/`take_combine` transform an ALREADY-SIGNED bundle + public data, so assembly runs
# engine-side without any secret key. Engine-seam only.
dig-offers = { version = "0.1", optional = true }
# `IndexMap<Bytes32, PublicKey>` is dig-offers' `owner_keys` input shape (a coin-puzzle-hash → key
# map, order-preserving). Engine-seam only; used solely to hand keys to the offer builders.
indexmap = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
# Derives deterministic, hashed test seeds (never integer-literal keys — CodeQL-clean).
sha2 = "0.10"
chia-sdk-test = "0.30"

[package.metadata.docs.rs]
all-features = true
